# docs/swagger.yaml
@@ -1,17 +1,5 @@
 basePath: /
 definitions:
-  model.AddPhotoRequest:
-    properties:
-      image_content:
-        description: Immagine in formato base64
-        type: string
-      image_name:
-        description: Nome dell'immagine
-        type: string
-    required:
-    - image_content
-    - image_name
-    type: object
   model.AddPhotoResponse:
     properties:
       photo:
@@ -54,12 +42,16 @@ definitions:
       image_url:
         description: URL dell'immagine
         type: string
+      preview_url:
+        description: URL dell'anteprima
+        type: string
       thumbnail_url:
         description: URL del thumbnail
         type: string
     required:
     - image_name
     - image_url
+    - preview_url
     - thumbnail_url
     type: object
 info:
@@ -107,15 +99,18 @@ paths:
       - photos
     post:
       consumes:
-      - application/json
+      - multipart/form-data
       description: Carica una nuova foto sul server
       parameters:
-      - description: Dati della foto da caricare
-        in: body
-        name: request
+      - description: File immagine da caricare
+        in: formData
+        name: fiimagele
         required: true
-        schema:
-          $ref: '#/definitions/model.AddPhotoRequest'
+        type: file
+      - description: Nome personalizzato per l'immagine
+        in: formData
+        name: imageName
+        type: string
       produces:
       - application/json
       responses:
